--- a/package.json
+++ b/package.json
@@ -1,13 +1,9 @@
 {
-  "name": "my-app",
+  "name": "lone-wolf",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@types/jest": "^24.9.1",
     "@types/node": "^12.20.36",
     "@types/react": "^16.14.20",
     "@types/react-dom": "^16.9.14",
