--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -22,8 +22,8 @@ on:
 
 env:
   AZURE_WEBAPP_NAME: lone-wolf
-  AZURE_WEBAPP_PACKAGE_PATH: 'build'      # set this to the path to your web app project, defaults to the repository root
-  NODE_VERSION: '10.x'                # set this to the node version to use
+  AZURE_WEBAPP_PACKAGE_PATH: './build'      # set this to the path to your web app project, defaults to the repository root
+  NODE_VERSION: '16.13.0'                # set this to the node version to use
 
 jobs:
   build-and-deploy:
