--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "Lone wolf",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "local": "npm run build && node build/server.js",
+    "start": "node build/server.js"
   },
   "repository": {
     "type": "git",
@@ -16,10 +18,12 @@
   },
   "homepage": "https://github.com/hwallis93/lone-wolf#readme",
   "dependencies": {
+    "@types/ws": "^8.2.0",
     "express": "^4.17.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "ws": "^8.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
