--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   },
   "homepage": "https://github.com/hwallis93/lone-wolf#readme",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
     "@types/ws": "^8.2.0",
     "express": "^4.17.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "typescript": "^4.4.4",
     "ws": "^8.2.3"
   },
