--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Lone wolf",
   "scripts": {
-    "build": "webpack",
+    "build": "npx tsc && webpack",
     "local": "npm run build && node build/server.js",
     "start": "node build/server.js"
   },
@@ -21,6 +21,7 @@
     "@reduxjs/toolkit": "^1.6.2",
     "@types/ws": "^8.2.0",
     "express": "^4.17.1",
+    "lodash.clonedeep": "^4.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
@@ -33,6 +34,7 @@
     "@babel/preset-react": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
     "@types/express": "^4.17.13",
+    "@types/lodash.clonedeep": "^4.5.6",
     "@types/react-dom": "^17.0.11",
     "babel-loader": "^8.2.3",
     "html-webpack-plugin": "^5.5.0",
