--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   "homepage": "https://github.com/hwallis93/lone-wolf#readme",
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
-    "@types/ws": "^8.2.0",
     "express": "^4.17.1",
+    "json5": "^2.2.0",
     "lodash.clonedeep": "^4.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -36,6 +36,7 @@
     "@types/express": "^4.17.13",
     "@types/lodash.clonedeep": "^4.5.6",
     "@types/react-dom": "^17.0.11",
+    "@types/ws": "^8.2.0",
     "babel-loader": "^8.2.3",
     "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.61.0",
