--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
+    "type-fest": "^2.5.2",
     "typescript": "^4.4.4",
     "ws": "^8.2.3"
   },
