--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "homepage": "https://github.com/hwallis93/lone-wolf#readme",
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
+    "@types/lodash.zip": "^4.2.6",
     "express": "^4.17.1",
     "json5": "^2.2.0",
     "lodash.clonedeep": "^4.5.0",
+    "lodash.zip": "^4.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
