--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lodash.zip": "^4.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-download-link": "^2.3.0",
     "react-redux": "^7.2.6",
     "type-fest": "^2.5.2",
     "typescript": "^4.4.4",
