--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "@types/react-dom": "^17.0.11",
     "@types/ws": "^8.2.0",
     "babel-loader": "^8.2.3",
+    "css-loader": "^6.5.1",
     "html-webpack-plugin": "^5.5.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.61.0",
     "webpack-cli": "^4.9.1"
   }
